Fix page spacing

--- a/app/components/page/page.scss
+++ b/app/components/page/page.scss
@@ -22,6 +22,7 @@
   }
 
   .page__body {
+    padding-top: 30px;
     padding-bottom: 40px;
   }
 
