--- a/app/components/stage/stage.scss
+++ b/app/components/stage/stage.scss
@@ -2,7 +2,7 @@
 
   .stage {
     display: flex;
-    padding: 30px;
+    padding: 0 30px 30px 30px;
     justify-content: center;
   }
 
